Archive2/06/f62630d981ff6e/output
main.cpp: In function 'main':
main.cpp:18:5: error: 'else' without a previous 'if'
     else
     ^
main.cpp:19:28: warning: ISO C99 requires rest arguments to be used
         LOG("argc is zero!");
                            ^
main.cpp:22:23: warning: ISO C99 requires rest arguments to be used
         LOG("argc > 1");
                       ^
